--- a/config/database.yml
+++ b/config/database.yml
@@ -10,23 +10,20 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: db
 
 development:
   <<: *default
-  database: qoodish_development
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: qoodish_test
+  adapter: sqlite3
+  database: db/test.sqlite3
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +46,10 @@ test:
 #
 production:
   <<: *default
+  adapter: mysql
+  encoding: utf8
   database: qoodish_production
-  username: qoodish
-  password: <%= ENV['QOODISH_DATABASE_PASSWORD'] %>
+  username: <%= ENV['DB_USER']  %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] %>
+  port: <%= ENV['DB_PORT'] %>
