docker-compose for production

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,9 @@ services:
   redis:
     image: redis
   api:
-    build: .
+    build:
+      context: ./
+      dockerfile: docker/api/Dockerfile
     command: bundle exec rails s -p 4000 -b '0.0.0.0'
     volumes:
       - .:/qoodish
