--- a/config/database.yml
+++ b/config/database.yml
@@ -46,7 +46,7 @@ test:
 #
 production:
   <<: *default
-  adapter: mysql
+  adapter: mysql2
   encoding: utf8
   database: qoodish_production
   username: <%= ENV['DB_USER']  %>
