--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+WEB_ENDPOINT=http://localhost:3000
+
 FIREBACE_PROJECT_ID=my-project
 
 AWS_REGION=ap-northeast-1
@@ -11,3 +13,7 @@ SUBSTITUTE_URL=https://s3-ap-northeast-1.amazonaws.com/qoodish/substitute.png
 GITHUB_API_ENDPOINT=https://api.github.com
 
 GOOGLE_API_KEY_SERVER=apikey
+
+FCM_SERVER_KEY=serverkey
+GOOGLE_IID_ENDPOINT=https://iid.googleapis.com
+FCM_ENDPOINT=https://fcm.googleapis.com
