--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,5 +9,14 @@ steps:
     - --keyring=qoodish
     - --key=qoodish
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME-api:$REVISION_ID', '.']
-images: ['gcr.io/$PROJECT_ID/$REPO_NAME-api:$REVISION_ID']
+  args: [
+    'build',
+    '-t',
+    'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA',
+    '-t',
+    'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest',
+    '.'
+  ]
+images:
+  - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest'
