--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,11 @@
 steps:
 - name: gcr.io/cloud-builders/gcloud
+  entrypoint: 'bash'
   args:
-    - kms
-    - decrypt
-    - --ciphertext-file=firebase-credentials.prod.json.enc
-    - --plaintext-file=firebase-credentials.json
-    - --location=global
-    - --keyring=qoodish
-    - --key=qoodish
+    - '-c'
+    - |
+      gcloud kms decrypt --ciphertext-file=.env.production.enc --plaintext-file=.env.production --location=global --keyring=qoodish --key=qoodish
+      gcloud kms decrypt --ciphertext-file=firebase-credentials.prod.json.enc --plaintext-file=firebase-credentials.json --location=global --keyring=qoodish --key=qoodish
 - name: 'gcr.io/cloud-builders/docker'
   args: [
     'build',
