--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,15 +9,15 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [
     'build',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest',
-    '.'
-  ]
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
+    '--no-cache',
+    '--build-arg',
+    'NGINX_SERVER_NAME=${_NGINX_SERVER_NAME}',
+    '--build-arg',
+    'NGINX_UPSTREAM_HOST=${_NGINX_UPSTREAM_HOST}',
+    '--build-arg',
+    'NGINX_UPSTREAM_PORT=${_NGINX_UPSTREAM_PORT}',
+    '--build-arg',
+    'WEB_ENDPOINT=${_WEB_ENDPOINT}',
     '-t',
     'gcr.io/$PROJECT_ID/$REPO_NAME-nginx:$COMMIT_SHA',
     '-t',
@@ -25,6 +25,15 @@ steps:
     '.'
   ]
   dir: 'nginx'
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+    'build',
+    '-t',
+    'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA',
+    '-t',
+    'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest',
+    '.'
+  ]
 images:
   - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest'
