Introduce background jobs with Cloud Pub/Sub

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 # FCM
 firebase-credentials.json
 
+# GCP
+gcp-pubsub-credentials.json
+
 nginx/nginx.conf
 
 # Ignore master key for decrypting credentials and more.
