--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -5,6 +5,7 @@ steps:
     - '-c'
     - |
       gcloud kms decrypt --ciphertext-file=firebase-credentials.prod.json.enc --plaintext-file=firebase-credentials.json --location=global --keyring=qoodish --key=qoodish
+      gcloud kms decrypt --ciphertext-file=gcp-pubsub-credentials.prod.json.enc --plaintext-file=gcp-pubsub-credentials.json --location=global --keyring=qoodish --key=qoodish
 - name: 'gcr.io/cloud-builders/docker'
   args: [
     'build',
