--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -1,41 +1,35 @@
 steps:
-- name: gcr.io/cloud-builders/gcloud
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      gcloud kms decrypt --ciphertext-file=firebase-credentials.prod.json.enc --plaintext-file=firebase-credentials.json --location=global --keyring=qoodish --key=qoodish
-      gcloud kms decrypt --ciphertext-file=gcp-pubsub-credentials.prod.json.enc --plaintext-file=gcp-pubsub-credentials.json --location=global --keyring=qoodish --key=qoodish
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
-    '--no-cache',
-    '--build-arg',
-    'NGINX_SERVER_NAME=${_NGINX_SERVER_NAME}',
-    '--build-arg',
-    'NGINX_UPSTREAM_HOST=${_NGINX_UPSTREAM_HOST}',
-    '--build-arg',
-    'NGINX_UPSTREAM_PORT=${_NGINX_UPSTREAM_PORT}',
-    '--build-arg',
-    'WEB_ENDPOINT=${_WEB_ENDPOINT}',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-nginx:$COMMIT_SHA',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-nginx:latest',
-    '.'
-  ]
-  dir: 'nginx'
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA',
-    '-t',
-    'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest',
-    '.'
-  ]
-images:
-  - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/$REPO_NAME-api:latest'
-  - 'gcr.io/$PROJECT_ID/$REPO_NAME-nginx:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/$REPO_NAME-nginx:latest'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        gcloud kms decrypt --ciphertext-file=firebase-credentials.prod.json.enc --plaintext-file=firebase-credentials.json --location=global --keyring=qoodish --key=qoodish
+        gcloud kms decrypt --ciphertext-file=gcp-pubsub-credentials.prod.json.enc --plaintext-file=gcp-pubsub-credentials.json --location=global --keyring=qoodish --key=qoodish
+  - name: "gcr.io/kaniko-project/executor"
+    dir: "nginx"
+    args:
+      - --context
+      - /workspace/nginx
+      - --cache=true
+      - --cache-ttl=6h
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-nginx:$COMMIT_SHA
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-nginx:latest
+      - --build-arg
+      - NGINX_SERVER_NAME=${_NGINX_SERVER_NAME}
+      - --build-arg
+      - NGINX_UPSTREAM_HOST=${_NGINX_UPSTREAM_HOST}
+      - --build-arg
+      - NGINX_UPSTREAM_PORT=${_NGINX_UPSTREAM_PORT}
+      - --build-arg
+      - WEB_ENDPOINT=${_WEB_ENDPOINT}
+  - name: "gcr.io/kaniko-project/executor"
+    args:
+      - --cache=true
+      - --cache-ttl=6h
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-api:latest
