--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=password
+      - RAILS_LOG_LEVEL=debug
     command: >
       /bin/bash -c "rm -f /qoodish/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
@@ -40,6 +41,7 @@ services:
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=password
+      - RAILS_LOG_LEVEL=info
     command: >
       bundle exec rails subscriber:run --trace
     depends_on:
