--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -6,6 +6,6 @@ ARG NGINX_UPSTREAM_PORT
 ARG WEB_ENDPOINT
 
 COPY nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
-RUN envsubst '$NGINX_SERVER_NAME $NGINX_UPSTREAM_HOST $NGINX_UPSTREAM_PORT $WEB_ENDPOINT' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
+RUN envsubst '$NGINX_SERVER_NAME $NGINX_UPSTREAM_HOST $NGINX_UPSTREAM_PORT' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
 
 CMD nginx -g 'daemon off;'
