--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -17,14 +17,23 @@ server {
 
   keepalive_timeout 5;
 
+  set $cors "";
+
   location / {
-    if ($request_method = 'OPTIONS') {
-      add_header Access-Control-Allow-Origin 'https://qoodish.com https://beta.qoodish.com';
+    if ($http_origin ~* (.*\.qoodish.com)) {
+      set $cors "true";
+    }
+
+    if ($cors = "true") {
+      add_header Access-Control-Allow-Origin $http_origin always;
       add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE';
       add_header Access-Control-Allow-Headers 'Origin, Authorization, Accept, Content-Type';
       add_header Access-Control-Max-Age 3600;
       add_header Content-Type 'text/plain charset=UTF-8';
       add_header Content-Length 0;
+    }
+
+    if ($request_method = 'OPTIONS') {
       return 204;
     }
 
