--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -20,12 +20,12 @@ server {
   set $cors "";
 
   location / {
-    if ($http_origin ~* (.*\.qoodish.com)) {
+    if ($http_origin ~ "^(https://qoodish.com|https://beta.qoodish.com)$") {
       set $cors "true";
     }
 
     if ($cors = "true") {
-      add_header Access-Control-Allow-Origin $http_origin always;
+      add_header Access-Control-Allow-Origin $http_origin;
       add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE';
       add_header Access-Control-Allow-Headers 'Origin, Authorization, Accept, Content-Type';
       add_header Access-Control-Max-Age 3600;
