--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -7,6 +7,17 @@ steps:
         gcloud kms decrypt --ciphertext-file=firebase-credentials.prod.json.enc --plaintext-file=firebase-credentials.json --location=global --keyring=qoodish --key=qoodish
         gcloud kms decrypt --ciphertext-file=gcp-pubsub-credentials.prod.json.enc --plaintext-file=gcp-pubsub-credentials.json --location=global --keyring=qoodish --key=qoodish
   - name: "gcr.io/kaniko-project/executor"
+    dir: "rendertron"
+    args:
+      - --context
+      - /workspace/rendertron
+      - --cache=true
+      - --cache-ttl=6h
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-rendertron:$COMMIT_SHA
+      - --destination
+      - gcr.io/$PROJECT_ID/$REPO_NAME-rendertron:latest
+  - name: "gcr.io/kaniko-project/executor"
     dir: "nginx"
     args:
       - --context
