--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,13 +16,5 @@ steps:
       - |
         docker-compose up -d
         sleep 10
-        docker-compose exec -T api bundle exec rails db:setup RAILS_ENV=test
-        docker-compose exec -T api bundle exec rails test
-  - name: "gcr.io/kaniko-project/executor"
-    args:
-      - --cache=true
-      - --cache-ttl=6h
-      - --destination
-      - gcr.io/$PROJECT_ID/$REPO_NAME-api:$COMMIT_SHA
-      - --destination
-      - gcr.io/$PROJECT_ID/$REPO_NAME-api:latest
+        docker-compose run api bundle exec rails db:setup RAILS_ENV=test
+        docker-compose run api bundle exec rails test
