--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,10 +8,10 @@ steps:
         gcloud kms decrypt --ciphertext-file=gcp-credentials.dev.json.enc --plaintext-file=gcp-credentials.json --location=global --keyring=qoodish --key=qoodish
         gcloud kms decrypt --ciphertext-file=.env.development.enc --plaintext-file=.env --location=global --keyring=qoodish --key=qoodish
   - id: rails-test
-    name: "gcr.io/$PROJECT_ID/docker-compose"
-    entrypoint: "bash"
+    name: docker/compose:alpine-1.25.4
+    entrypoint: sh
     args:
-      - "-c"
+      - -c
       - |
         docker-compose up -d
         sleep 10
