--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,14 +16,30 @@ services:
     build: .
     volumes:
       - .:/qoodish
-    env_file: .env
     environment:
+      - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
+      - PORT=3000
       - RAILS_LOG_LEVEL=debug
       - REDIS_HOST=redis
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=password
+      - SUBSTITUTE_URL=https://storage.googleapis.com/qoodish/assets/icon-512-2019-04-06.png
+      - OGP_IMAGE_URL=https://storage.googleapis.com/qoodish/assets/ogp-image-2019-04-05.png
+      - PUBSUB_TOPIC=rails-api-topic
+      - PUBSUB_SUBSCRIPTION=rails-api-sub
+      - ALLOWED_ENDPOINTS=http://localhost:5000
+      - CLOUD_STORAGE_ENDPOINT=https://storage.cloud.google.com
+      - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
+      - GOOGLE_PROJECT_ID=my-project2-1132
+      - GOOGLE_ACCOUNT_TYPE=service_account
+      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
+      - GOOGLE_API_KEY_SERVER=${GOOGLE_API_KEY_SERVER}
+      - FCM_SERVER_KEY=${FCM_SERVER_KEY}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
+      - GOOGLE_PRIVATE_KEY=${GOOGLE_PRIVATE_KEY}
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - "3000:3000"
@@ -34,13 +50,25 @@ services:
     build: .
     volumes:
       - .:/qoodish
-    env_file: .env
     environment:
+      - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
       - RAILS_LOG_LEVEL=info
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=password
+      - PUBSUB_TOPIC=rails-api-topic
+      - PUBSUB_SUBSCRIPTION=rails-api-sub
+      - ALLOWED_ENDPOINTS=http://localhost:5000
+      - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
+      - GOOGLE_PROJECT_ID=my-project2-1132
+      - GOOGLE_ACCOUNT_TYPE=service_account
+      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
+      - GOOGLE_API_KEY_SERVER=${GOOGLE_API_KEY_SERVER}
+      - FCM_SERVER_KEY=${FCM_SERVER_KEY}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
+      - GOOGLE_PRIVATE_KEY=${GOOGLE_PRIVATE_KEY}
     command: bundle exec rails subscriber:run --trace
     depends_on:
       - db
