Use Secret Manager to encrypt / decrypt secrets

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     build: .
     volumes:
       - .:/qoodish
+    env_file: .env
     environment:
       - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
@@ -34,13 +35,8 @@ services:
       - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
       - GOOGLE_PROJECT_ID=my-project2-1132
       - GOOGLE_ACCOUNT_TYPE=service_account
-      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
-      - GOOGLE_API_KEY_SERVER=${GOOGLE_API_KEY_SERVER}
-      - FCM_SERVER_KEY=${FCM_SERVER_KEY}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
-      - GOOGLE_PRIVATE_KEY=${GOOGLE_PRIVATE_KEY}
-    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    entrypoint: /qoodish/entrypoint.sh
+    command: bundle exec rails s -b 0.0.0.0
     ports:
       - "3000:3000"
     depends_on:
@@ -50,6 +46,7 @@ services:
     build: .
     volumes:
       - .:/qoodish
+    env_file: .env
     environment:
       - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
@@ -63,12 +60,7 @@ services:
       - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
       - GOOGLE_PROJECT_ID=my-project2-1132
       - GOOGLE_ACCOUNT_TYPE=service_account
-      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
-      - GOOGLE_API_KEY_SERVER=${GOOGLE_API_KEY_SERVER}
-      - FCM_SERVER_KEY=${FCM_SERVER_KEY}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
-      - GOOGLE_PRIVATE_KEY=${GOOGLE_PRIVATE_KEY}
+    entrypoint: /qoodish/entrypoint.sh
     command: bundle exec rails subscriber:run --trace
     depends_on:
       - db
