--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,10 +16,8 @@ services:
     build: .
     volumes:
       - .:/qoodish
-      # berglas / gcloud credentials
-      - ~/.config/gcloud:/root/.config/gcloud
+    env_file: .env
     environment:
-      - SKIP_BERGLAS=${SKIP_BERGLAS}
       - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
       - PORT=3000
@@ -37,12 +35,6 @@ services:
       - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
       - GOOGLE_PROJECT_ID=my-project2-1132
       - GOOGLE_ACCOUNT_TYPE=service_account
-      - RAILS_MASTER_KEY=sm://my-project2-1132/RAILS_MASTER_KEY
-      - GOOGLE_API_KEY_SERVER=sm://my-project2-1132/GOOGLE_API_KEY_SERVER
-      - FCM_SERVER_KEY=sm://my-project2-1132/FCM_SERVER_KEY
-      - GOOGLE_CLIENT_ID=sm://my-project2-1132/GOOGLE_CLIENT_ID
-      - GOOGLE_CLIENT_EMAIL=sm://my-project2-1132/GOOGLE_CLIENT_EMAIL
-      - GOOGLE_PRIVATE_KEY=sm://my-project2-1132/GOOGLE_PRIVATE_KEY
     entrypoint: /qoodish/entrypoint.sh
     command: bundle exec rails s -b 0.0.0.0
     ports:
@@ -54,10 +46,8 @@ services:
     build: .
     volumes:
       - .:/qoodish
-      # berglas / gcloud credentials
-      - ~/.config/gcloud:/root/.config/gcloud
+    env_file: .env
     environment:
-      - SKIP_BERGLAS=${SKIP_BERGLAS}
       - RAILS_LOG_TO_STDOUT=true
       - RAILS_ENV=development
       - RAILS_LOG_LEVEL=info
@@ -70,12 +60,6 @@ services:
       - CLOUD_STORAGE_BUCKET_NAME=my-project2-1132
       - GOOGLE_PROJECT_ID=my-project2-1132
       - GOOGLE_ACCOUNT_TYPE=service_account
-      - RAILS_MASTER_KEY=sm://my-project2-1132/RAILS_MASTER_KEY
-      - GOOGLE_API_KEY_SERVER=sm://my-project2-1132/GOOGLE_API_KEY_SERVER
-      - FCM_SERVER_KEY=sm://my-project2-1132/FCM_SERVER_KEY
-      - GOOGLE_CLIENT_ID=sm://my-project2-1132/GOOGLE_CLIENT_ID
-      - GOOGLE_CLIENT_EMAIL=sm://my-project2-1132/GOOGLE_CLIENT_EMAIL
-      - GOOGLE_PRIVATE_KEY=sm://my-project2-1132/GOOGLE_PRIVATE_KEY
     entrypoint: /qoodish/entrypoint.sh
     command: bundle exec rails subscriber:run --trace
     depends_on:
