--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,9 @@
 .vscode
 
 # GCP
-gcp-credentials.json
-gcp-credentials.*.json
+credentials.json
+credentials.*.json
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
