--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -17,21 +17,21 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - id: auth
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: projects/438842534630/locations/global/workloadIdentityPools/github-actions/providers/github-actions
           service_account: github-actions@qoodish-common.iam.gserviceaccount.com
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@v1
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 3.2
           bundler-cache: true
-      - name: Rufo
-        run: |
-          bundle exec rufo --check ./app
+      # - name: rubocop
+      #   run: |
+      #     bundle exec rubocop --format github
       - run: |
           gcloud auth configure-docker $ARTIFACT_REGISTRY --quiet
       - name: Build image
@@ -55,14 +55,14 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - id: auth
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: projects/438842534630/locations/global/workloadIdentityPools/github-actions/providers/github-actions
           service_account: github-actions@qoodish-common.iam.gserviceaccount.com
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@v1
       - name: Deploy revision
         env:
           CLOUDSDK_CORE_DISABLE_PROMPTS: 1
@@ -71,8 +71,6 @@ jobs:
           DB_HOST: 10.78.96.3
           PUBSUB_TOPIC: rails-api-topic
           GOOGLE_IID_ENDPOINT: https://iid.googleapis.com
-          SUBSTITUTE_URL: https://storage.googleapis.com/qoodish.appspot.com/assets/icon-512-2019-04-06.png
-          OGP_IMAGE_URL: https://storage.googleapis.com/qoodish.appspot.com/assets/ogp-image-2019-04-05.png
           ALLOWED_ENDPOINTS: https://dev.qoodish.com
           CLOUD_STORAGE_ENDPOINT: https://storage.googleapis.com
           CLOUD_STORAGE_BUCKET_NAME: qoodish-dev.appspot.com
@@ -90,7 +88,8 @@ jobs:
             --ingress=all \
             --allow-unauthenticated \
             --image=$ARTIFACT_REGISTRY/$PROJECT_ID/$SERVICE_NAME/$SERVICE_NAME:$GITHUB_SHA \
-            --vpc-connector=projects/qoodish-dev/locations/asia-northeast1/connectors/qoodish \
+            --network=default \
+            --subnet=default \
             --vpc-egress=private-ranges-only \
             --set-env-vars "RAILS_ENV=production" \
             --set-env-vars "GOOGLE_CLIENT_EMAIL=$CLOUD_RUN_SA_NAME" \
@@ -98,11 +97,7 @@ jobs:
             --set-env-vars "DB_HOST=$DB_HOST" \
             --set-env-vars "DB_PORT=3306" \
             --set-env-vars "PUBSUB_TOPIC=$PUBSUB_TOPIC" \
-            --set-env-vars "RAILS_LOG_TO_STDOUT=true" \
-            --set-env-vars "STACKDRIVER_LOGGING=true" \
             --set-env-vars "GOOGLE_IID_ENDPOINT=$GOOGLE_IID_ENDPOINT" \
-            --set-env-vars "SUBSTITUTE_URL=$SUBSTITUTE_URL" \
-            --set-env-vars "OGP_IMAGE_URL=$OGP_IMAGE_URL" \
             --set-env-vars "ALLOWED_ENDPOINTS=$ALLOWED_ENDPOINTS" \
             --set-env-vars "CLOUD_STORAGE_ENDPOINT=$CLOUD_STORAGE_ENDPOINT" \
             --set-env-vars "CLOUD_STORAGE_BUCKET_NAME=$CLOUD_STORAGE_BUCKET_NAME" \
@@ -122,14 +117,14 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - id: auth
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: projects/438842534630/locations/global/workloadIdentityPools/github-actions/providers/github-actions
           service_account: github-actions@qoodish-common.iam.gserviceaccount.com
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@v1
       - name: Deploy revision
         env:
           CLOUDSDK_CORE_DISABLE_PROMPTS: 1
@@ -140,8 +135,6 @@ jobs:
           SUBSCRIBER_ENDPOINT: https://subscriber-dev.qoodish.com
           PUBSUB_SA_EMAIL: pubsub@qoodish-dev.iam.gserviceaccount.com
           GOOGLE_IID_ENDPOINT: https://iid.googleapis.com
-          SUBSTITUTE_URL: https://storage.googleapis.com/qoodish.appspot.com/assets/icon-512-2019-04-06.png
-          OGP_IMAGE_URL: https://storage.googleapis.com/qoodish.appspot.com/assets/ogp-image-2019-04-05.png
           ALLOWED_ENDPOINTS: https://dev.qoodish.com
           CLOUD_STORAGE_ENDPOINT: https://storage.googleapis.com
           CLOUD_STORAGE_BUCKET_NAME: qoodish-dev.appspot.com
@@ -159,7 +152,8 @@ jobs:
             --ingress=all \
             --allow-unauthenticated \
             --image=$ARTIFACT_REGISTRY/$PROJECT_ID/$SERVICE_NAME/$SERVICE_NAME:$GITHUB_SHA \
-            --vpc-connector=projects/qoodish-dev/locations/asia-northeast1/connectors/qoodish \
+            --network=default \
+            --subnet=default \
             --vpc-egress=private-ranges-only \
             --set-env-vars "SUBSCRIBER_MODE=true" \
             --set-env-vars "RAILS_ENV=production" \
@@ -170,11 +164,7 @@ jobs:
             --set-env-vars "PUBSUB_TOPIC=$PUBSUB_TOPIC" \
             --set-env-vars "SUBSCRIBER_ENDPOINT=$SUBSCRIBER_ENDPOINT" \
             --set-env-vars "PUBSUB_SA_EMAIL=$PUBSUB_SA_EMAIL" \
-            --set-env-vars "RAILS_LOG_TO_STDOUT=true" \
-            --set-env-vars "STACKDRIVER_LOGGING=true" \
             --set-env-vars "GOOGLE_IID_ENDPOINT=$GOOGLE_IID_ENDPOINT" \
-            --set-env-vars "SUBSTITUTE_URL=$SUBSTITUTE_URL" \
-            --set-env-vars "OGP_IMAGE_URL=$OGP_IMAGE_URL" \
             --set-env-vars "ALLOWED_ENDPOINTS=$ALLOWED_ENDPOINTS" \
             --set-env-vars "CLOUD_STORAGE_ENDPOINT=$CLOUD_STORAGE_ENDPOINT" \
             --set-env-vars "CLOUD_STORAGE_BUCKET_NAME=$CLOUD_STORAGE_BUCKET_NAME" \
