--- a/test/fixtures/spots.yml
+++ b/test/fixtures/spots.yml
@@ -1,11 +1,11 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+public_one:
+  map: public_one
+  place: one
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+public_two:
+  map: public_one
+  place: two
+
+private_one:
+  map: private
+  place: one
