--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,34 +1,24 @@
 {
-	"name": "Ruby on Rails & MySQL",
-	"dockerComposeFile": "docker-compose.yaml",
-	"service": "app",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"forwardPorts": [
-		3000
-	],
-	"postCreateCommand": [
-		"bundle install",
-		"rails db:setup",
-		"git config --global core.editor \"code --wait\""
-	],
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"GitHub.copilot",
-				"Shopify.ruby-lsp",
-				"redhat.vscode-yaml"
-			]
-		}
-	},
-	"features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/ruby:1": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/github-cli:1": {
-			"version": "latest"
-		}
-	}
+  "name": "Ruby on Rails & MySQL",
+  "dockerComposeFile": "docker-compose.yaml",
+  "service": "app",
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "forwardPorts": [
+    3000
+  ],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "Shopify.ruby-lsp",
+        "redhat.vscode-yaml",
+        "hoovercj.vscode-power-mode"
+      ]
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/ruby:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  }
 }
