--- a/test/fixtures/place_details.yml
+++ b/test/fixtures/place_details.yml
@@ -1,11 +1,23 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one_en:
+  place_id_val: 12345
+  locale: 0
+  latitude: 35.681382
+  longitude: 139.766084
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one_ja:
+  place_id_val: 12345
+  locale: 1
+  latitude: 35.681382
+  longitude: 139.766084
+
+two_en:
+  place_id_val: 67890
+  locale: 0
+  latitude: 35.681382
+  longitude: 139.766084
+
+two_ja:
+  place_id_val: 67890
+  locale: 1
+  latitude: 35.681382
+  longitude: 139.766084
