--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -147,6 +147,7 @@ jobs:
             --region=asia-northeast1 \
             --project=$PROJECT_ID \
             --cpu=1000m \
+            --cpu-boost \
             --memory=512Mi \
             --max-instances=2 \
             --port=8080 \
@@ -214,6 +215,7 @@ jobs:
             --region=asia-northeast1 \
             --project=$PROJECT_ID \
             --cpu=1000m \
+            --cpu-boost \
             --memory=512Mi \
             --max-instances=2 \
             --port=8080 \
